@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: unixFCmd.test,v 1.16 2002/08/08 10:41:22 hobbs Exp $
+# RCS: @(#) $Id: unixFCmd.test,v 1.17 2003/01/25 00:16:39 hobbs Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -230,10 +230,12 @@ test unixFCmd-14.2 {GetPermissionsAttribute} {unixOnly notRoot} {
 # Find a group that exists on this system, or else skip tests that require
 # groups
 set ::tcltest::testConstraints(foundGroup) 0
-catch {
-    set groupList [exec groups]
-    set group [lindex $groupList 0]
-    set ::tcltest::testConstraints(foundGroup) 1
+if {$tcl_platform(platform) == "unix"} {
+    catch {
+	set groupList [exec groups]
+	set group [lindex $groupList 0]
+	set ::tcltest::testConstraints(foundGroup) 1
+    }
 }
 
 #groups hard to test
